--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   },
   "homepage": "https://github.com/PencilFoxStudios/PNFXDiscordBotTemplate#readme",
   "dependencies": {
-    "@pencilfoxstudios/erasertail": "^1.1.9",
+    "@pencilfoxstudios/erasertail": "^1.2.2",
     "discord.js": "^14.5.0",
+    "inaturalits": "^1.0.1",
     "moment": "^2.29.4",
     "shader": "^1.0.0"
   },
