--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "pnfx-discord-bot-template",
+  "name": "veloxator",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "setup": "doppler setup",
-    "start": "doppler run -- ts-node src/Bot.ts"
+    "start": "ts-node src/Bot.ts"
   },
   "repository": {
     "type": "git",
@@ -22,13 +21,16 @@
   },
   "homepage": "https://github.com/PencilFoxStudios/PNFXDiscordBotTemplate#readme",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.41",
     "@pencilfoxstudios/erasertail": "^1.2.2",
     "discord.js": "^14.5.0",
-    "inaturalits": "^1.0.1",
+    "googlemaps": "^1.12.0",
+    "inaturalits": "^1.1.2",
     "moment": "^2.29.4",
     "shader": "^1.0.0"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.43.3",
     "@types/node": "^18.8.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
