--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
         "baseUrl": "./",
         "allowJs": true
     },
+    "types": [ "googlemaps"],
     "files": [
         "src/Bot.ts"
     ],
